src/objects/Product_Reference__mdt.object
<CustomObject>
    <description>Holds Product ID references for use in Flow, Code, and formulas.</description>
    <fields>
        <fullName>NEOSUBAURA__c</fullName>
        <businessOwnerGroup>System_Admins</businessOwnerGroup>
        <description>This field holds the SKU of a specific product. JIRA: SFDCSPT-610</description>
        <inlineHelpText>This field holds the SKU of a specific product.</inlineHelpText>
        <label>NEO-SUB-AURA-DB</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAR__c</fullName>
        <businessOwnerGroup>System_Admins</businessOwnerGroup>
        <description>This field holds the SKU of a specific product. JIRA: SFDCSPT-610</description>
        <inlineHelpText>This field holds the SKU of a specific product.</inlineHelpText>
        <label>PAR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PEROEMROY__c</fullName>
        <businessOwnerGroup>System_Admins</businessOwnerGroup>
        <description>This field holds the SKU of a specific product. JIRA: SFDCSPT-610</description>
        <inlineHelpText>This field holds the SKU of a specific product.</inlineHelpText>
        <label>PER-OEM-ROY</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POCENT__c</fullName>
        <businessOwnerGroup>System_Admins</businessOwnerGroup>
        <description>This field holds the SKU of a specific product. JIRA: SFDCSPT-610</description>
        <inlineHelpText>This field holds the SKU of a specific product.</inlineHelpText>
        <label>POC-ENT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POCPSCON__c</fullName>
        <businessOwnerGroup>System_Admins</businessOwnerGroup>
        <description>This field holds the SKU of a specific product. JIRA: SFDCSPT-610</description>
        <inlineHelpText>This field holds the SKU of a specific product.</inlineHelpText>
        <label>POC-PS-CON</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROBROACCBUN__c</fullName>
        <businessOwnerGroup>System_Admins</businessOwnerGroup>
        <description>This field holds the SKU of a specific product. JIRA: SFDCSPT-610</description>
        <inlineHelpText>This field holds the SKU of a specific product.</inlineHelpText>
        <label>PRO-BRO-ACC-BUN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROGOLACCBUN__c</fullName>
        <businessOwnerGroup>System_Admins</businessOwnerGroup>
        <description>This field holds the SKU of a specific product. JIRA: SFDCSPT-610</description>
        <inlineHelpText>This field holds the SKU of a specific product.</inlineHelpText>
        <label>PRO-GOL-ACC-BUN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROSERAUR__c</fullName>
        <businessOwnerGroup>System_Admins</businessOwnerGroup>
        <description>This field holds the SKU of a specific product. JIRA: SFDCSPT-610</description>
        <inlineHelpText>This field holds the SKU of a specific product.</inlineHelpText>
        <label>PRO-SER-AUR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROSERCON__c</fullName>
        <businessOwnerGroup>System_Admins</businessOwnerGroup>
        <description>This field holds the SKU of a specific product. JIRA: SFDCSPT-610</description>
        <inlineHelpText>This field holds the SKU of a specific product.</inlineHelpText>
        <label>PRO-SER-CON</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROSERDATBOO__c</fullName>
        <businessOwnerGroup>System_Admins</businessOwnerGroup>
        <description>This field holds the SKU of a specific product. JIRA: SFDCSPT-610</description>
        <inlineHelpText>This field holds the SKU of a specific product.</inlineHelpText>
        <label>PRO-SER-DAT-BOO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROSERINNLAB__c</fullName>
        <businessOwnerGroup>System_Admins</businessOwnerGroup>
        <description>This field holds the SKU of a specific product. JIRA: SFDCSPT-610</description>
        <inlineHelpText>This field holds the SKU of a specific product.</inlineHelpText>
        <label>PRO-SER-INN-LAB</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROSERSOLAUD__c</fullName>
        <businessOwnerGroup>System_Admins</businessOwnerGroup>
        <description>This field holds the SKU of a specific product. JIRA: SFDCSPT-610</description>
        <inlineHelpText>This field holds the SKU of a specific product.</inlineHelpText>
        <label>PRO-SER-SOL-AUD</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROSERSOLDES__c</fullName>
        <businessOwnerGroup>System_Admins</businessOwnerGroup>
        <description>This field holds the SKU of a specific product. JIRA: SFDCSPT-610</description>
        <inlineHelpText>This field holds the SKU of a specific product.</inlineHelpText>
        <label>PRO-SER-SOL-DES</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROSERSTAAUG__c</fullName>
        <businessOwnerGroup>System_Admins</businessOwnerGroup>
        <description>This field holds the SKU of a specific product. JIRA: SFDCSPT-610</description>
        <inlineHelpText>This field holds the SKU of a specific product.</inlineHelpText>
        <label>PRO-SER-STA-AUG</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROSERTRAIN__c</fullName>
        <businessOwnerGroup>System_Admins</businessOwnerGroup>
        <description>This field holds the SKU of a specific product. JIRA: SFDCSPT-610</description>
        <inlineHelpText>This field holds the SKU of a specific product.</inlineHelpText>
        <label>PRO-SER-TRAIN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROSERTRA__c</fullName>
        <businessOwnerGroup>System_Admins</businessOwnerGroup>
        <description>This field holds the SKU of a specific product. JIRA: SFDCSPT-610</description>
        <inlineHelpText>This field holds the SKU of a specific product.</inlineHelpText>
        <label>PRO-SER-TRA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROSILACCBUN__c</fullName>
        <businessOwnerGroup>System_Admins</businessOwnerGroup>
        <description>This field holds the SKU of a specific product. JIRA: SFDCSPT-610</description>
        <inlineHelpText>This field holds the SKU of a specific product.</inlineHelpText>
        <label>PRO-SIL-ACC-BUN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUBAGISOL__c</fullName>
        <businessOwnerGroup>System_Admins</businessOwnerGroup>
        <description>This field holds the SKU of a specific product. JIRA: SFDCSPT-610</description>
        <inlineHelpText>This field holds the SKU of a specific product.</inlineHelpText>
        <label>SUB-AGI-SOL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUBBLO__c</fullName>
        <businessOwnerGroup>System_Admins</businessOwnerGroup>
        <description>This field holds the SKU of a specific product. JIRA: SFDCSPT-610</description>
        <inlineHelpText>This field holds the SKU of a specific product.</inlineHelpText>
        <label>SUB-BLO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUBBUSBUN__c</fullName>
        <businessOwnerGroup>System_Admins</businessOwnerGroup>
        <description>This field holds the SKU of a specific product. JIRA: SFDCSPT-610</description>
        <inlineHelpText>This field holds the SKU of a specific product.</inlineHelpText>
        <label>SUB-BUS-BUN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUBDISBUN__c</fullName>
        <description>This field holds the SKU of a specific product. JIRA: SFDCSPT-610</description>
        <inlineHelpText>This field holds the SKU of a specific product.</inlineHelpText>
        <label>SUB-DIS-BUN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUBENTBUN__c</fullName>
        <businessOwnerGroup>System_Admins</businessOwnerGroup>
        <description>This field holds the SKU of a specific product. JIRA: SFDCSPT-610</description>
        <inlineHelpText>This field holds the SKU of a specific product.</inlineHelpText>
        <label>SUB-ENT-BUN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUBENT__c</fullName>
        <businessOwnerGroup>System_Admins</businessOwnerGroup>
        <description>This field holds the SKU of a specific product. JIRA: SFDCSPT-610</description>
        <inlineHelpText>This field holds the SKU of a specific product.</inlineHelpText>
        <label>SUB-ENT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUBGRALARBUN__c</fullName>
        <description>This field holds the SKU of a specific product. JIRA: SFDCSPT-610</description>
        <inlineHelpText>This field holds the SKU of a specific product.</inlineHelpText>
        <label>SUB-GRA-LAR-BUN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUBGRALARDEV__c</fullName>
        <businessOwnerGroup>System_Admins</businessOwnerGroup>
        <description>This field holds the SKU of a specific product. JIRA: SFDCSPT-610</description>
        <inlineHelpText>This field holds the SKU of a specific product.</inlineHelpText>
        <label>SUB-GRA-LAR-DEV</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUBGRAMINBUN__c</fullName>
        <description>This field holds the SKU of a specific product. JIRA: SFDCSPT-610</description>
        <inlineHelpText>This field holds the SKU of a specific product.</inlineHelpText>
        <label>SUB-GRA-MIN-BUN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUBGRAMINDEV__c</fullName>
        <businessOwnerGroup>System_Admins</businessOwnerGroup>
        <description>This field holds the SKU of a specific product. JIRA: SFDCSPT-610</description>
        <inlineHelpText>This field holds the SKU of a specific product.</inlineHelpText>
        <label>SUB-GRA-MIN-DEV</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUBGRAREGBUN__c</fullName>
        <businessOwnerGroup>System_Admins</businessOwnerGroup>
        <description>This field holds the SKU of a specific product. JIRA: SFDCSPT-610</description>
        <inlineHelpText>This field holds the SKU of a specific product.</inlineHelpText>
        <label>SUB-GRA-REG-BUN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUBGRAREGDEV__c</fullName>
        <businessOwnerGroup>System_Admins</businessOwnerGroup>
        <description>This field holds the SKU of a specific product. JIRA: SFDCSPT-610</description>
        <inlineHelpText>This field holds the SKU of a specific product.</inlineHelpText>
        <label>SUB-GRA-REG-DEV</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUBGRASTABUN__c</fullName>
        <businessOwnerGroup>System_Admins</businessOwnerGroup>
        <description>This field holds the SKU of a specific product. JIRA: SFDCSPT-610</description>
        <inlineHelpText>This field holds the SKU of a specific product.</inlineHelpText>
        <label>SUB-GRA-STA-BUN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUBGRASTADEV__c</fullName>
        <businessOwnerGroup>System_Admins</businessOwnerGroup>
        <description>This field holds the SKU of a specific product. JIRA: SFDCSPT-610</description>
        <inlineHelpText>This field holds the SKU of a specific product.</inlineHelpText>
        <label>SUB-GRA-STA-DEV</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUBKER__c</fullName>
        <businessOwnerGroup>System_Admins</businessOwnerGroup>
        <description>This field holds the SKU of a specific product. JIRA: SFDCSPT-610</description>
        <inlineHelpText>This field holds the SKU of a specific product.</inlineHelpText>
        <label>SUB-KER</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUBLIN__c</fullName>
        <businessOwnerGroup>System_Admins</businessOwnerGroup>
        <description>This field holds the SKU of a specific product. JIRA: SFDCSPT-610</description>
        <inlineHelpText>This field holds the SKU of a specific product.</inlineHelpText>
        <label>SUB-LIN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUBOEMLIC__c</fullName>
        <businessOwnerGroup>System_Admins</businessOwnerGroup>
        <description>This field holds the SKU of a specific product. JIRA: SFDCSPT-610</description>
        <inlineHelpText>This field holds the SKU of a specific product.</inlineHelpText>
        <label>SUB-OEM-LIC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUBOEMPLA__c</fullName>
        <businessOwnerGroup>System_Admins</businessOwnerGroup>
        <description>This field holds the SKU of a specific product. JIRA: SFDCSPT-610</description>
        <inlineHelpText>This field holds the SKU of a specific product.</inlineHelpText>
        <label>SUB-OEM-PLA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUBPSCON__c</fullName>
        <businessOwnerGroup>System_Admins</businessOwnerGroup>
        <description>This field holds the SKU of a specific product. JIRA: SFDCSPT-610</description>
        <inlineHelpText>This field holds the SKU of a specific product.</inlineHelpText>
        <label>SUB-PS-CON</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUBSTA__c</fullName>
        <businessOwnerGroup>System_Admins</businessOwnerGroup>
        <description>This field holds the SKU of a specific product. JIRA: SFDCSPT-610</description>
        <inlineHelpText>This field holds the SKU of a specific product.</inlineHelpText>
        <label>SUB-STA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUPDED__c</fullName>
        <businessOwnerGroup>System_Admins</businessOwnerGroup>
        <description>This field holds the SKU of a specific product. JIRA: SFDCSPT-610</description>
        <inlineHelpText>This field holds the SKU of a specific product.</inlineHelpText>
        <label>SUP-DED</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUPENT__c</fullName>
        <businessOwnerGroup>System_Admins</businessOwnerGroup>
        <description>This field holds the SKU of a specific product. JIRA: SFDCSPT-610</description>
        <inlineHelpText>This field holds the SKU of a specific product.</inlineHelpText>
        <label>SUP-ENT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUPMANSER__c</fullName>
        <businessOwnerGroup>System_Admins</businessOwnerGroup>
        <description>This field holds the SKU of a specific product. JIRA: SFDCSPT-610</description>
        <inlineHelpText>This field holds the SKU of a specific product.</inlineHelpText>
        <label>SUP-MAN-SER</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUPOEM__c</fullName>
        <businessOwnerGroup>System_Admins</businessOwnerGroup>
        <description>This field holds the SKU of a specific product. JIRA: SFDCSPT-610</description>
        <inlineHelpText>This field holds the SKU of a specific product.</inlineHelpText>
        <label>SUP-OEM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUPPLA__c</fullName>
        <businessOwnerGroup>System_Admins</businessOwnerGroup>
        <description>This field holds the SKU of a specific product. JIRA: SFDCSPT-610</description>
        <inlineHelpText>This field holds the SKU of a specific product.</inlineHelpText>
        <label>SUP-PLA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUPXSPEXT__c</fullName>
        <businessOwnerGroup>System_Admins</businessOwnerGroup>
        <description>This field holds the SKU of a specific product. JIRA: SFDCSPT-610</description>
        <inlineHelpText>This field holds the SKU of a specific product.</inlineHelpText>
        <label>SUP-XSP-EXT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Product Reference</label>
    <pluralLabel>Product References</pluralLabel>
</CustomObject>